fix scroll margins on smaller screens

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -8,7 +8,7 @@
   }
 
   section {
-    @apply py-12 md:py-24 w-full;
+    @apply py-12 md:py-24 w-full scroll-mt-12 md:scroll-mt-0;
   }
 
   h1,
